--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -843,8 +843,66 @@ Pour décrire effectivement cette époque, il faudrait sans doute montrer beauco
 bon&#8239;? Il faudrait plutôt comprendre&#8239;: la totalité de ce qui s’est fait, ce qui reste à faire, et non ajouter d’autres ruines
 au vieux monde du spectacle et des souvenirs.&#8239;»<br>
 							<i>Sur le passage de quelques personnes à travers une assez courte unité de temps</i></p>
+							<h5><span>Vide et passivité dans la culture</h5>	
+						<p><span>«&#8239;L’ensemble de la culture actuelle peut être qualifiée d’aliénée en ce sens que 
+							toute activité, tout instant de la vie,
+toute idée, tout comportement n’a de sens qu’en dehors de soi, dans un ailleurs qui, pour n’être plus le ciel, n’en
+est que plus affolant à localiser&#8239;: une utopie, au sens propre du mot, domine en fait la vie du monde moderne.&#8239;»<br>
+							<i>Préliminaires pour une définition de l’unité du programme révolutionnaire</i></p>
+                       				<p><span>
+«&#8239;Il n’y a plus d’«&#8239;utopie&#8239;» possible, parce que toutes les conditions de sa réalisation existent déjà. On les détourne
+pour servir au maintien de l’ordre actuel, dont l’absurdité est si terrible qu’on la réalise d’abord, quel que soit son
+prix, sans que personne n’ose en formuler la théorie, même après. C’est l’utopie inverse de la répression&#8239;: elle dispose de tous les pouvoirs, 
+							et personne ne la veut.&#8239;»<br>
+							Internationale Situationniste n° 7, <i>Du rôle de l’I.S.</i></p>
+						<p><span>«&#8239;L’appropriation de la nature par les hommes est précisément l’aventure dans laquelle nous 
+							sommes embarqués.
+On ne peut la discuter&#8239;; mais on ne peut discuter que sur elle, à partir d’elle. Ce qui est en question toujours, au
+centre de la pensée et de l’action modernes, c’est l’emploi possible du secteur dominé de la nature. [...] L’absence
+d’hypothèse d’ensemble, c’est-à-dire en fait le monopole d’une seule hypothèse non théorisée, qui est comme le
+produit automatique de la croissance aveugle du pouvoir actuel, fait le vide qui est le lot de la pensée contemporaine depuis quarante ans.&#8239;»
+							Internationale Situationniste n°8, <i>Domination de la nature, idéologies et classes</i></p>
+					<a id="Internationale Situationniste n°11, Comics par réalisation directe (texte de Raoul Vaneigem, images d’André Bertrand)" rel="corpus/Culturedétournement">
+				<img src="" alt="culturedétournement" width="150" height="auto" />
+						<p><span><i>Internationale Situationniste n°11, Comics par réalisation directe (texte de Raoul Vaneigem, images d’André Bertrand)</p><br>
+						<h5><span>L’aliénation de la communication&#8239;: spectacle, consommation, vie privée, politique</h5>
+						<p><span>«&#8239;La question du pouvoir est si bien cachée, dans les théories sociologiques et culturelles, 
+							que les experts peuvent
+noircir des milliers de pages sur la communication, ou les moyens de communication de masse dans la société
+moderne, sans jamais remarquer que la communication dont ils parlent est à sens unique, les consommateurs
+de communication n’ayant rien à répondre. Il y a dans la prétendue communication une rigoureuse division des
+tâches, qui recoupe finalement la division la plus générale entre organisateurs et consommateurs du temps de la
+société industrielle (lequel intègre et met en forme l’ensemble du travail et des loisirs). Celui qui n’est pas gêné par
+la tyrannie exercée sur sa vie à ce niveau, ne comprend rien à la société actuelle&#8239;; et se trouve donc parfaitement
+qualifié pour en brosser toutes les fresques sociologiques. Tous ceux qui s’inquiètent ou s’émerveillent devant cette
+culture de masse qui, à travers des mass-media unifiées planétairement, cultive les masses et en même temps «&#8239;massifie&#8239;» la «&#8239;haute 
+							culture&#8239;», 
+							oublient seulement que la culture, même haute, est maintenant enterrée dans les musées,
+y compris ses manifestations de révolte et d’auto-destruction. Et que les masses —&#8239;dont, finalement, nous sommes
+tous – sont tenues en dehors de la vie (de la participation à la vie), en dehors de l’action libre&#8239;: en subsistance, sur
+le mode du spectacle. La loi actuelle est que tout le monde consomme la plus grande quantité possible de néant&#8239;; y
+compris même le néant respectable de la vieille culture parfaitement coupée de sa signification originelle (le crétinisme progressiste 
+		s’attendrira toujours de voir le théâtre de Racine télévisé, ou les Yakoutes lire Balzac&#8239;: justement,
+il n’envisageait pas d’autre progrès humain).<br>
+La notion révélatrice de bombardement d’informations doit être entendue à son sens le plus large. Aujourd’hui
+la population est soumise en permanence à un bombardement de conneries qui n’est aucunement dépendant
+des mass-media. Et surtout rien ne serait plus faux, plus digne de la gauche antédiluvienne, que d’imaginer ces
+mass-media en concurrence avec d’autres sphères de la vie sociale moderne où les problèmes réels des gens seraient
+sérieusement posés.&#8239;»<br>
+							Internationale Situationniste n° 7, <i>Communication prioritaire</i></p>
 						<p><span></p>
-                       				<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+                        			<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
 						<p><span></p>
 						<p><span></p>
 						<p><span></p>
