--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -863,8 +863,8 @@ d’hypothèse d’ensemble, c’est-à-dire en fait le monopole d’une seule h
 produit automatique de la croissance aveugle du pouvoir actuel, fait le vide qui est le lot de la pensée contemporaine depuis quarante ans.&#8239;»
 							Internationale Situationniste n°8, <i>Domination de la nature, idéologies et classes</i></p>
 					<a id="Internationale Situationniste n°11, Comics par réalisation directe (texte de Raoul Vaneigem, images d’André Bertrand)" rel="corpus/Culturedétournement">
-				<img src="" alt="culturedétournement" width="150" height="auto" />
-						<p><span><i>Internationale Situationniste n°11, Comics par réalisation directe (texte de Raoul Vaneigem, images d’André Bertrand)</p><br>
+				<img src="https://drive.google.com/uc?id=1UMf1pbqpEZl0pjT2Xq7xa6EIM_ZB4KrC" alt="culturedétournement" width="150" height="auto" />
+						<p><span>Internationale Situationniste n°11, Comics par réalisation directe (texte de Raoul Vaneigem, images d’André Bertrand)</p><br>
 						<h5><span>L’aliénation de la communication&#8239;: spectacle, consommation, vie privée, politique</h5>
 						<p><span>«&#8239;La question du pouvoir est si bien cachée, dans les théories sociologiques et culturelles, 
 							que les experts peuvent
@@ -890,9 +890,75 @@ des mass-media. Et surtout rien ne serait plus faux, plus digne de la gauche ant
 mass-media en concurrence avec d’autres sphères de la vie sociale moderne où les problèmes réels des gens seraient
 sérieusement posés.&#8239;»<br>
 							Internationale Situationniste n° 7, <i>Communication prioritaire</i></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
+						<p><span>«&#8239;Voilà une bonne définition du spectacle en tant que «&#8239;la société même&#8239;»&#8239;: 
+							une société qui se conforme à l’image
+qu’elle livre à domicile. [...] Là où les choses ont un prix, les hommes sont totalement séparés. Tout est simple chez
+Anders. Alors, le spectacle, ce n’est plus seulement la télévision, la consommation d’images à domicile, c’est la société 
+							qui se conforme à son image suite à la livraison à domicile de ces images, par la 
+							consommation à domicile de
+ces images&#8239;: «&#8239;la radio, l’écran de télévision et la consommation de fantômes sont eux-mêmes des réalités sociales
+si massives qu’ils peuvent triompher de la plupart des autres réalités et déterminer eux-mêmes «&#8239;ce qui est réel&#8239;»,
+«&#8239;ce qui arrive réellement&#8239;»&#8239;». En ce sens, le spectacle n’est pas un instrument d’unification mais un instrument
+de conformation. Comme le dit très justement Anders, «&#8239;les représentations du «&#8239;monde&#8239;» que les émissions nous
+livrent ne conditionnent pas que nous et notre image du monde, mais le monde lui-même, le monde réel [...]<br>
+							Le spectacle a lieu à domicile, dans les cages et l’on ne voit pas ce qui se passe dans les cages. 
+							Donc, il n’y a pas
+contradiction à affirmer que ce monde est un désert et que ce monde est sinon un spectacle, du moins un monde
+spectaculaire, puisque le spectacle, invisible, a lieu dans les cages des dortoirs. Et le monde est bien le triste spectacle 
+							d’une immense accumulation de cages et de parkings. La consommation d’images de 
+							l’unification heureuse
+par la consommation a lieu dans les cages solitaires environnées de désolation et d’épouvante. On ne la voit jamais
+ailleurs. [...] C’est sa consommation dans l’isolement et le nombre immense des «&#8239;solistes de la consommation&#8239;»
+qui font le spectacle. On sait que les acteurs de théâtre redoutent une salle vide. Le monde est comme un théâtre
+éclaté en milliards de loges où l’on ne jouerait inlassablement qu’une seule et unique pièce. Le spectacle réside dans
+la consommation d’image à domicile, notamment dans la consommation d’images de la consommation, dans
+l’isolement et la solitude. C’est tout.&#8239;»
+<br>
+«&#8239;Notre monde actuel est «&#8239;postidéologique&#8239;»&#8239;: il n’a plus besoin d’idéologie. Ce qui signifie qu’il est inutile d’arranger 
+							après coup de fausses visions du monde, des visions qui diffèrent du monde, des idéologies, 
+							puisque le cours
+du monde lui-même est déjà un spectacle arrangé. Mentir devient superflu quand le mensonge est devenu vrai.
+Autrement dit le spectacle est une idéologie matérialisée&#8239;»<br>
+							Jean-Pierre Voyer, <i>Debord est un homme que je corrige toujours</i></p>
+					<a id="Pub, ma caméra" rel="corpus/J'aime ma caméra">
+				<img src="https://drive.google.com/uc?id=1FFlLIOca4btCimHV23oA-77xly6usAED" alt="J'aime ma caméra" width="150" height="auto" />
+						<p><span>«&#8239;Cette publicité de la caméra Eumig (été
+1967) évoque très justement la glaciation de
+la vie individuelle qui s’est renversée dans la
+perspective spectaculaire&#8239;: le présent se donne
+à vivre immédiatement comme souvenir. Par
+cette spatialisation du temps, qui se trouve sou-
+mis à l’ordre illusoire d’un présent accessible en
+permanence, le temps et la vie ont été perdus
+ensemble.&#8239;»<br>
+Internationale Situationniste n°11, <i>Quelques refus aisément prévisibles</i></p><br>
+						<p><span>«&#8239;Les anciennes pratiques de représentation, écriture, dessin, photographie et 
+							cinéma (vidéo), sont employées à tout
+moment par nos contemporains pour circonscrire leur vécu dans les bornes d’un souvenir socialement acceptable,
+pour écrire au jour le jour leur propre histoire officielle. Par suite, cette histoire tronquée est portée sur le réseau
+comme la marchandise au marché, pour être mise aux enchères. Chacun parodie dans sa vie quotidienne la marchandise, 
+							qui tire sa misère d’être produite dans le seul but d’être échangée. 
+							Chacun cultive vis-à-vis de soi la même
+distance et le même désintérêt que le possesseur de marchandises a pour sa marchandise propre, dont il n’a au fond
+que faire et qu’il veut avant tout écouler, contre laquelle il espère obtenir l’objet de son désir. Le vécu n’est plus que
+la valeur d’échange d’une reconnaissance sociale informatisée.
+<br>
+La mise en conformité répétée de tous ces moments par le biais des outils d’écriture ou de capture d’image in-
+formatique, comme étape préalable à leur vente formelle sur le réseau, façonne la perception au point où la vie
+apparaît seulement comme une agrégation fragmentaire d’instants à valoriser, au sens économique du terme. Il n’y
+a à extraire des événements qu’une suite de situations marchandes. La réitération d’un seul et même mode opéra-
+toire, techniquement et socialement déterminé, transforme le vécu en esclave, en support matériel d’un processus
+de valorisation symbolique, dont il n’est qu’un moment. Ce temps sans continuité n’est plus qu’une machine à
+souvenirs. Le vécu ne vaut désormais que pour son contraire, comme si l’on ne songeait qu’à tirer un beau cadavre
+d’un vivant.&#8239;»<br>
+Véloce, <i>La civilisation du jeu</i></p>
+						<p><span>«&#8239;La question est toujours, dans un temps comme le nôtre, de faire 
+							émerger une rupture dans ce qui a dénaturé le
+rapport au réel dans son fondement, de briser ce qui est devenu à terme, le seul réel connu. Chacun d’entre nous a
+une responsabilité personnelle dans le refus ou la complaisance vis-à-vis de conduites spectaculaires, qui prolongent
+ou interrompent la fausseté de la vie même.&#8239;»
+<br>
+						Véloce, <i>Ci-gît la critique</i></p>
 						<p><span></p>
 						<p><span></p>
                         			<p><span></p>
