--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -959,16 +959,124 @@ une responsabilité personnelle dans le refus ou la complaisance vis-à-vis de c
 ou interrompent la fausseté de la vie même.&#8239;»
 <br>
 						Véloce, <i>Ci-gît la critique</i></p>
-						<p><span></p>
-						<p><span></p>
-                        			<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
+						<p><span>«&#8239;Le monde moderne révèle lui-même, au grand dam des riches actuels, 
+							pourquoi les pauvres sont pauvres, ce qui
+fait que les pauvres sont pauvres, ce qui manque aux pauvres pour être riches. Ce monde révèle lui-même ce qui
+manque dans ce monde du manque, ce dont les pauvres sont privés et totalement privés. Les pauvres ne sont pas
+pauvres parce qu’ils sont privés de dessert utilitariste par la méchante économie mais parce qu’ils sont totalement
+privés de communication, totalement privés de tous moyens de communication. La vie quotidienne est la vie
+totalement privée de communication [...] Et les pauvres ne sont pas privés de communication parce que la méchante 
+économie ne leur laisserait pas assez de temps pour communiquer au Club Méditerranée, dans les maisons
+de la culture, dans les municipalités de gauche et dans les usines autogérées, mais parce que la communication est
+totalement aliénée, totalement réalisée hors d’eux et contre eux dans l’aliénation, comme Etat et comme marchandise. 
+[...] Seule notre conception de la communication permet de dire pourquoi les gens ne peuvent pas communiquer. 
+Si la communication est seulement quelque chose à côté de ce qui dans le monde est essentiel ou important
+ou encore quelque chose qui doit seulement avoir lieu après que l’humanité ait réglé ses «&#8239;si importants&#8239;» problèmes
+de survie, alors qu’est-ce qui empêche les gens de communiquer tout de suite&#8239;? Assurément rien. Si communiquer
+c’est seulement parler –&#8239;de quoi d’ailleurs, là est toute la question&#8239;– si communiquer c’est seulement faire bla-bla
+devant quelqu’un d’autre qui fait aussi bla-bla ; alors qu’est-ce qui empêche les gens de communiquer tout de
+suite ? Assurément rien. C’est précisément le fait que rien n’empêche les gens de communiquer si la communication
+doit être cela qui prouve par l’absurde que la communication n’est pas cela. La communication est évidemment 
+pratique et le contenu de la communication est lui-même éminemment pratique. [...] Les situationnistes ont
+fait dans leur vie l’expérience amère, telle que la relate Debord dans ses films <i>«&#8239;Sur le passage...&#8239;»</i> et <i>«&#8239;Critique de la
+séparation&#8239;»</i>, que là où l’on ne peut supprimer de travail on ne peut pas non plus construire de situation. Et si les
+gens ne peuvent pas communiquer c’est parce que les moyens pratiques de cette communication sont réellement
+aliénés, éloignés hors de leur portée et les dominent. Puisque rien ne m’empêche d’adresser la parole à quiconque
+dans la rue et que cependant cela est strictement impossible, sauf pour demander l’heure ou lors des tremblements
+de terre et des catastrophes, ce qui rend cette chose impossible est donc un manque de moyens et un manque
+de contenu. Rien n’empêche les gens de communiquer si ce n’est le manque de moyens, qui sont pratiques, et le
+manque de contenu, qui est pratique également. Et si ces moyens et ce contenu manquent, ce n’est pas parce qu’ils
+n’auraient pas encore été inventés par l’humanité, par l’histoire, c’est au contraire qu’ils ne sont que trop inventés,
+qu’ils n’existent que trop. Ils existent comme totalement développés mais totalement développés dans l’aliénation.
+S’ils manquent, c’est parce qu’ils se sont éloignés et qu’ils ont draîné avec eux toute possibilité de communication.
+
+L’Etat et la marchandise communiquent pour vous. L’Etat et la marchandise divisent pour vous. L’Etat et la marchandise 
+sont les figures concrètes de l’aliénation de la division du travail. L’Etat et la marchandise sont les seuls
+moyens de communication qui soient aujourd’hui.&#8239;»
+							Jean-Pierre Voyer, <i>Révélations sur le principe du monde</i></p>
+						<p><span>«&#8239;La démocratie c’est de la merde. La démocratie n’est rien 
+							d’autre que la prétention de l’État à annexer la communication. 
+							L’État démocratique est à la communication ce que l’argent est à 
+							la richesse, un représentant universel abstrait. 
+Avec la démocratie se trouve consacrée l’absence de la communication en tant qu’activité sociale de l’homme&#8239;: 
+la société est gagnée par l’intérêt privé, sous l’emprise effective de l’argent et de la marchandise qui deviennent le
+but de toute activité. La communication n’existe plus que sous la forme dégradée, vide de toute humanité, du débat
+d’intérêt, la politique. L’essence de l’homme a été confisquée par la marchandise, l’État a confisqué la conscience
+de l’homme. [...] La politique est alors le lieu où les aspirations contrariées de l’homme trouvent leur existence
+ineffective. La politique achèvera, pendant les deux derniers siècles, de dépouiller l’homme de son langage. L’État
+se chargera désormais de fournir une explication du monde aux individus, qui dès lors ne pourront plus se parler
+que par la médiation de son langage, la politique. C’est bien pourquoi à notre époque la critique de la politique est
+la condition première de toute critique. Notons que les étudiants ont un rapport intellectuel avec l’État, tandis que
+la bourgeoisie et les classes moyennes ont un rapport immédiatement pratique. Les premiers jugent la légitimité de
+l’État selon son concept abstrait, les seconds selon son efficacité à faire régner l’ordre. Dans tous les cas, la démocratie
+est la caution centrale d’une société sans esprit, fondée concrètement sur l’exploitation et l’oppression d’autrui.
+Le mensonge démocratique est là pour empêcher que la division existant dans cette société soit prononcée dans la
+pensée, publiquement. Il est là pour refouler la guerre sociale.&#8239;»
+<br>
+Os Cangaceiros</p>
+							<a id="Gilet Jaune" rel="corpus/Gilet Jaune">
+				<img src="https://drive.google.com/uc?id=1vYuQb-dMO3DIhtAZnMx-Xs6hBJwBujP_" alt="Gilet Jaune" width="150" height="auto" />
+                        			<p><span>«&#8239;Le secret de la misère de la vie quotidienne est le vrai secret d’État. 
+							C’est la clef de voûte qui achève l’édifice de
+la séparation qui est aussi bien l’édifice de l’État. [...] Le prolétariat sera visible ou ne sera pas. <b>Le prolétariat
+réside dans sa propre visibilité. L’organisation du prolétariat est l’organisation de sa visibilité. La pratique
+globale du prolétariat sera sa publicité permanente ou rien.</b>&#8239;»
+<br>
+Jean-Pierre Voyer, <i>Reich, mode d’emploi</i>, 1971</p>
+							
+					<h5><span>Donner à la misère son langage et sa publicité</h5>
+						<p><span>«&#8239;Comme autre côté de la déficience de la vie historique générale, 
+la vie individuelle n’a pas encore d’histoire. Les
+pseudo-événements qui se pressent dans la dramatisation spectaculaire n’ont pas été vécus par ceux qui en sont
+informés&#8239;; et de plus ils se perdent dans l’inflation de leur remplacement précipité, à chaque pulsion de la machinerie spectaculaire. 
+D’autre part, ce qui a été réellement vécu est sans relation avec le temps irréversible officiel
+de la société, et en opposition directe au rythme pseudo-cyclique du sous-produit consommable de ce temps. Ce
+vécu individuel de la vie quotidienne séparée reste sans langage, sans concept, sans accès critique à son propre passé
+qui n’est consigné nulle part. Il ne se communique pas. Il est incompris et oublié au profit de la fausse mémoire
+spectaculaire du non-mémorable.&#8239;»
+<br>
+							<i>La Société du Spectacle</i>, §157</p>
+						<p><span>«&#8239;Sous le contrôle du pouvoir, le langage désigne toujours autre chose que le vécu authentique. 
+C’est précisément
+là que réside la possibilité d’une contestation complète.&#8239;»
+<br>
+Internationale Situationniste n°8, <i>All the king’s men</i></p>
+						<p><span>«&#8239;Il n’est pas concevable qu’une organisation qui représente la contestation vécue par les gens, 
+et qui sait leur en
+parler, reste faible&#8239;; quand bien même serait-elle réprimée très durement.&#8239;»
+<br>
+Internationale Situationniste n° 7, <i>Communication prioritaire</i></p>
+						<p><span>«&#8239;Ce qui empêche ce que nous disons sur la construction de la vie 
+quotidienne d’être récupéré par la culture et la
+sous-culture [...] c’est précisément que chacune des idées situationnistes est le prolongement fidèle des gestes ébau-
+chés à chaque instant et par des milliers de gens pour éviter qu’un jour ne soit vingt-quatre heures de vie gâchée.&#8239;»
+<br>
+Internationale Situationniste n°8, <i>Banalités de base</i></p>
+						<p><span>«&#8239;Que ce soit dans la vie interne d’une organisation ou bien dans son action vers l’extérieur, 
+la transmission unilatérale spectaculaire d’un enseignement révolutionnaire a perdu toutes ses chances dans La Société du Spectacle qui, à la
+fois, organise massivement le spectacle de toute autre chose et affecte tout spectacle d’un facteur d’écoeurement.&#8239;»
+<br>
+Internationale Situationniste, n°7, <i>Les mauvais jours finiront</i></p>
+						<p><span>«&#8239;Nous estimons que le rôle des théoriciens, rôle indispensable mais non dominant, est d’apporter les éléments de
+connaissance et les instruments conceptuels qui traduisent en clair –&#8239;ou en plus clair et cohérent&#8239;– la crise, et les désirs
+latents, tels qu’ils sont vécus par les gens&#8239;: disons le nouveau prolétariat de cette «&#8239;ouvelle pauvreté&#8239;» qu’il faut
+nommer et décrire. [...] Suivant la réalité qui s’esquisse actuellement, on pourra considérer comme prolétaires les
+gens qui n’ont aucune possibilité de modifier l’espace-temps social que la société leur alloue à consommer (aux divers 
+degrés de l’abondance et de la promotion permises). Les dirigeants sont ceux qui organisent cet espace-temps,
+ou ont une marge de choix personnel (même, par exemple, du fait de la survivance importante de formes anciennes
+de la propriété privée). Un mouvement révolutionnaire est celui qui change radicalement l’organisation de cet
+espace-temps et la manière même de décider désormais sa réorganisation permanente (et non un mouvement qui
+changerait seulement la forme juridique de la propriété ou l’origine sociale des dirigeants).&#8239;»
+<br>
+Internationale Situationniste n°8, <i>Domination de la nature, idéologies et classes</i></p>
+				<p><span>«&#8239;La théorie est capable d’intéresser les masses lorsqu’elle argumente ad hominem, lorsqu’elle devient radicale. 
+							Etre
+radicale, c’est saisir les choses à la racine. Or pour, l’homme, la racine c’est la richesse, c’est-à-dire la communication 
+pratique. [...] On comprend que les travailleurs fassent la grève des illusions quand on prétend leur parler de
+ces tristes choses tout juste bonnes pour des petits profs de gauche. Si maintenant il s’agit de s’emparer de ce qui
+fait le privilège réel des riches, c’est tout autre chose.&#8239;»
+<br>
+Jean-Pierre Voyer, <i>Révélations sur le principe du monde</i></p>
 						<p><span></p>
 						<p><span></p>
 						<p><span></p>
