--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -1069,24 +1069,148 @@ espace-temps et la manière même de décider désormais sa réorganisation perm
 changerait seulement la forme juridique de la propriété ou l’origine sociale des dirigeants).&#8239;»
 <br>
 Internationale Situationniste n°8, <i>Domination de la nature, idéologies et classes</i></p>
-				<p><span>«&#8239;La théorie est capable d’intéresser les masses lorsqu’elle argumente ad hominem, lorsqu’elle devient radicale. 
-							Etre
+				<p><span>«&#8239;La théorie est capable d’intéresser les masses lorsqu’elle argumente ad hominem, 
+					lorsqu’elle devient radicale. Etre
 radicale, c’est saisir les choses à la racine. Or pour, l’homme, la racine c’est la richesse, c’est-à-dire la communication 
 pratique. [...] On comprend que les travailleurs fassent la grève des illusions quand on prétend leur parler de
 ces tristes choses tout juste bonnes pour des petits profs de gauche. Si maintenant il s’agit de s’emparer de ce qui
 fait le privilège réel des riches, c’est tout autre chose.&#8239;»
 <br>
 Jean-Pierre Voyer, <i>Révélations sur le principe du monde</i></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-                        			<p><span></p>
-						<p><span></p>
-						<p><span></p>
+					<h5><span>Théorie et pratique</h5>
+						<p><span>«&#8239;La critique révolutionnaire de toutes les conditions existantes 
+n’a certes pas le monopole de l’intelligence, mais
+bien celui de son emploi. Dans la crise présente de la culture, de la société, ceux qui n’ont pas cet emploi de 
+l’intelligence, n’ont, en fait, aucune sorte d’intelligence discernable. Cessez de nous parler d’intelligence sans emploi,
+vous nous ferez plaisir. Pauvre Heidegger&#8239;! Pauvre Lukàcs&#8239;! Pauvre Sartre&#8239;! Pauvre Barthes&#8239;! Pauvre Lefebvre&#8239;!
+Pauvre Cardan&#8239;! Tics, tics et tics. Sans le mode d’emploi de l’intelligence, on n’a que par fragments caricaturaux les
+idées novatrices, celles qui peuvent comprendre la totalité de notre époque dans le même mouvement qu’elles la
+contestent. [...] Les spécialistes de la pensée ne peuvent plus être que des penseurs de la spécialisation.&#8239;»
+<br>							
+Internationale Situationniste n° 9, <i>Maintenant, l’I.S.</i></p>
+						<p><span>«&#8239;Si quelqu’un jette cette revue à l’égoût parce qu’elle l’horripile, 
+il fait un geste beaucoup plus riche que s’il la lit,
+la comprend à moitié et nous demande un mémoire ampliatif grâce auquel il puisse se prouver à lui-même qu’il est
+un homme intelligent et cultivé, c’est-à-dire un imbécile.&#8239;»
+<br>
+Internationale Situationniste n°8, <i>Banalités de base</i></p>
+						<p><span>«&#8239;La critique de l’idéologie est la condition première de toute critique&#8239;; 
+elle ne trouve pas sa conclusion en elle-même, mais dans le seul projet possible de notre époque, celui dont la réalisation est dans la rue. 
+							[...] Ce que nous
+disons existe déjà dans toutes les têtes, et c’est ce qui existe en suspens dans la préhistoire des hommes. Pendant
+dix ans, les situationnistes ont écrit des livres. En un mois, la plupart de leurs phrases couvraient la plupart des
+murs de Paris. Quelle que soit l’intelligence d’un homme, les découvertes de la pensée sont égales pour tous. «&#8239;La
+théorie devient pratique quand elle pénètre les masses.&#8239;» Qu’une vérité objective appartienne à la théorie n’est pas
+une question théorique, mais bien une question pratique. C’est seulement dans sa réalisation révolutionnaire, dans
+la critique pratique de l’ensemble des conditions existantes, qu’elle peut être comprise rationnellement et devenir
+vraie. Des idées aux faits, il n’y a qu’un pas. Les actions les amélioreront. Les hommes ne peuvent faire moins que
+de tenir compte de la vérité de ce qui les regarde&#8239;; mais, pour le faire, ils découvrent vite qu’ils doivent en créer les
+conditions pratiques, qu’ils doivent donc renverser les conditions existantes.&#8239;»
+<br>
+Internazionale situazionista, n°1, <i>Quand seul le meilleur suffira</i></p>
+					<h5><span>Les perspectives situationnistes</h5>
+					<a id="littleNémo" rel="corpus/littleNémo">
+				<img src="https://drive.google.com/uc?id=1CgS5r2AFDO5IvE9rYmufJ3AJoZF01OM3" alt="littleNémo" width="150" height="auto" />
+						<p><span>«&#8239;Il n’y a pas, pour des révolutionnaires, de possible retour en arrière. 
+						Le monde de l’expression, quel que soit
+son contenu, est déjà périmé. Il se répète scandaleusement, pour se maintenir aussi longtemps que la société
+dominante réussira à maintenir la privation et la rareté
+qui sont les conditions anachroniques de son règne. Mais
+le maintien ou la subversion de cette société n’est pas une
+question utopique&#8239;: c’est la plus brûlante question d’aujourd’hui, celle qui commande toutes les autres. [...] La
+situation est conçue comme le contraire de l’oeuvre d’art,
+qui est un essai de valorisation absolue, et de conservation, de l’instant présent. [...] Chaque situation, aussi
+consciemment construite qu’elle puisse être, contient sa
+négation et va inévitablement vers son propre renversement. Dans la conduite de la vie individuelle, une action
+situationniste ne se fonde pas sur l’idée abstraite du progrès rationaliste (selon Descartes «&#8239;nous rendre maîtres et
+possesseurs de la nature&#8239;»), mais sur une pratique de l’arrangement du milieu qui nous conditionne. Le constructeur de situations, 
+							si l’on reprend un mot de Marx, «&#8239;en
+agissant par ses mouvements sur la nature extérieure et en
+la transformant... transforme en même temps sa propre
+nature&#8239;».
+<br>
+I.S. n°3, <i>Le sens du dépérissement de l’art</i></p>
+						<p><span>«&#8239;Les urbanistes du XXe siècle devront construire des
+aventures. L’acte situationniste le plus simple consistera à abolir tous les souvenirs de l’emploi du temps de
+notre époque. C’est une époque qui, jusqu’ici, a vécu très
+au-dessous de ses moyens.&#8239;»
+<br>I.S. n°3, <i>L’urbanisme unitaire à la fin des années 50</i></p>
+						<p><span>«&#8239;La vie quotidienne est la seule possibilité pour l’art futur. Il faut chercher des amis radicaux, et il y en a. Les vieux
+disent&#8239;: nous étions radicaux dans notre jeunesse. Oui, c’est cela. Dans la jeunesse, ils vivaient encore. On a oublié
+ce que l’on voulait. On dort. On est mort. Il faut appeler les éveillés, réveiller les somnolents, enterrer les morts.
+C’est-à-dire&#8239;: commencer.&#8239;»
+<br>
+Lettre d’Uwe Lausen envoyée à la 5e conférence de l’I.S. à Göteborg</p>
+						<p><span>«&#8239;La réalisation de l’art, la poésie (au sens situationniste) signifie qu’on ne peut se réaliser dans une « œuvre », mais
+au contraire se réaliser tout court. Le «&#8239;tout dire&#8239;» inauguré par Sade impliquait déjà l’abolition du domaine de la
+littérature séparée (où seul ce qui est littéraire peut être dit). Seulement cette abolition, consciemment affirmée par
+les Dadaïstes, après Rimbaud et Lautréamont, n’était pas un dépassement. Il n’y a pas de dépassement sans réalisation, 
+et on ne peut dépasser l’art sans le réaliser. Pratiquement il n’y a même pas eu d’abolition, puisqu’après Joyce,
+Duchamp et Dada, une nouvelle littérature spectaculaire continue de pulluler. C’est que le «&#8239;tout dire&#8239;» ne peut
+exister sans la liberté de tout faire. Dada avait une chance de réalisation dans Spartakus, dans la pratique révolutionnaire 
+du prolétariat allemand. L’échec de celui-ci rendait le sien inévitable. Il est devenu, dans les écoles artistiques
+ultérieures (sans exclure la quasi-totalité de ses protagonistes), l’expression littéraire du néant du faire poétique,
+l’art d’exprimer le néant de la liberté quotidienne. L’ultime expression de cet art du «&#8239;tout dire&#8239;» privé du faire est
+la page blanche... La poésie moderne (expérimentale, permutationnelle, spatialiste, surréaliste ou néodadaïste) est
+le contraire de la poésie, le projet artistique récupéré par le pouvoir. Elle abolit la poésie sans la réaliser&#8239;; elle vit de
+son autodestruction permanente. « À quoi bon sauver la langue –&#8239;reconnaît misérablement Max Bense&#8239;– quand il
+n’y a plus rien à dire&#8239;? », aveu de spécialiste&#8239;! Psittacisme ou mutisme, c’est la seule alternative des spécialistes de la
+permutation. La pensée et l’art moderne garantis par le pouvoir, et le garantissant, se meuvent donc dans ce que
+Hegel appelait «&#8239;le langage de la flatterie&#8239;». Tous contribuent à l’éloge du pouvoir et de ses produits, perfectionnent
+la réification et la banalisent. En affirmant que «&#8239;la réalité consiste en langage&#8239;», ou que le langage «&#8239;ne peut être
+considéré qu’en lui-même et pour lui-même&#8239;» les spécialistes du langage concluent au «&#8239;langage-objet&#8239;», aux «&#8239;mots-
+choses&#8239;» et font leur délectation de l’éloge de leur propre réification. Le modèle de la chose devient dominant, et la
+marchandise, encore une fois, trouve sa réalisation, ses poètes. La théorie de l’État, de l’économie, du droit, de la
+philosophie, de l’art, tout a maintenant ce caractère de précaution apologétique.&#8239;»
+<br>
+Internationale Situationniste n°10, <i>Les mots captifs</i></p>
+					<p><b><br>-&#8239;Conclusion<A NAME="6"></A> </b></p><span>
+                        			<p><span>«&#8239;Il revient à l’I.S. d’avoir formulé pour la première fois un concept pratique de la richesse. 
+							Elle parvient à concevoir
+la richesse comme richesse de la communication et pratique de la communication et elle se déclare du parti de ceux
+qui ont pour but la communication totale. La vie d’un homme d’Etat, c’est l’Etat&#8239;; la vie d’un homme d’affaires, ce
+sont les affaires. La vie qui les passionne consiste dans leurs activités publiques et sociales. C’est cette activité que
+nous, pauvres modernes, voulons mais sans son aliénation, une richesse qui n’a pas besoin de pauvres pour exister.
+Nous voulons ce qu’il y a de riche et de puissant dans l’Etat et dans l’argent, ce qu’il y a de passionnant dans la vie
+d’un Médicis ou d’un Frédéric II, et non des babioles compensatrices, et non une réduction infinie du temps de
+travail, et non les signes extérieurs de la richesse.&#8239;»<br>
+«&#8239;Nous pauvres modernes, ne voulons rien d’autre. C’est pourquoi à moins nous ne bougeons pas. Nous, pauvres
+modernes, voulons employer tout notre temps à la pratique de l’esprit pratique. On ne peut être riche et travailleur.
+Nous, pauvres modernes, si nous combattons, c’est seulement pour être plus riches que les riches et plus puissants
+que les puissants.&#8239;»<br>
+«&#8239;«&#8239;Ne travaillez jamais&#8239;» est la construction de situation elle-même, l’activité en quoi consiste la richesse. Ce n’est
+plus le temps laissé libre par le triste travail qui sert à construire des situations et à l’usage passionnant de la vie.
+C’est toute la vie qui consiste à vivre et non plus un surplus de la vie.&#8239;»
+<br>
+Jean-Pierre Voyer, <i>Révélations sur le principe du monde</i></p>
+						<p><span>«&#8239;La seule raison historique possible [...] 
+est celle que peut fonder pratiquement l’activité d’urne société libre en
+détruisant tout ce qui lui est opposé, en soumettant tout au dialogue des individus associés. [...] 
+Ce projet révolutionnaire qui hante l’histoire moderne reste le seul digne d’être défendu. Et tout d’abord, pour ceux à qui cette
+ère de la falsification n’a pas fait passer le goût de la vérité, parce que c’est seulement à partir de lui, de ses progrès
+comme de ses reculs, que l’on peut comprendre le texte social, sinon indéchiffrable, de notre époque.&#8239;»<br>
+«&#8239;Ainsi la base subjective du désir révolutionnaire se trouve-t-elle dépouillée par le mouvement de l’histoire aliénée
+de toute apparence d’arbitraire&#8239;: l’objectivité du monde encore existant est de part en part déterminée par ces aspirations
+qu’il lui faut, interminablement, écraser, et en même temps continuer à justifier en les écrasant&#8239;»
+<br>
+Jaime Semprun, <i>Dialogues sur l’achèvement des Temps Modernes</i></p>
+						<p><span>Le problème de la transformation du monde posé comme exigence fondamentale
+							n’est pas une abstraction,
+mais se contente au contraire de définir le seul terrain sur lequel la vérité d’une théorie révolutionnaire peut se
+prouver à elle-même en actes&#8239;: le reste n’a aucune espèce d’importance. Et la difficulté d’une théorie n’est pas dans
+les mots ou dans les phrases, mais dans l’exigence dans la vie. Sa vérité est tout entière suspendue à sa capacité à
+devenir une force pratique en cristallisant les besoins sociaux d’une époque. L’écoeurement provoqué par toute
+idéologie témoigne de l’usure des moyens d’expression et exprime le besoin d’une théorie dont le seul objet soit
+d’exprimer les vérités et les désirs refoulés de l’époque, qui donne à la vie prolétarisée son langage, qui lui permette
+de nommer sa misère pour la communiquer, d’où la pratique du scandale comme application des leçons de l’art
+moderne. La liberté ne peut se tenir que d’elle-même, elle ne saurait admettre aucune cause, elle ne saurait résulter 
+d’aucune nécessité, d’aucun présupposé, elle est la suppression de toute nécessité et de tous présupposés, et si
+notre parti triomphe il ne peut le devoir qu’à lui-même. La radicalité d’une théorie révolutionnaire réside autant
+dans le rapport qu’elle implique à la théorie elle-même, que dans son contenu effectif&#8239;: c’est seulement à partir de
+ces considérations que l’on peut poser la question de ce qu’il y a à tirer et à critiquer dans la théorie et la pratique
+situationniste. Si le suivisme et l’idéalisation de figures comme celles de Debord doivent être critiquées, c’est en
+comprenant sur quelles aspirations réelles se fonde toute adhésion à une idéologie, ét éventuellement aussi quelle
+est la part de responsabilité de ceux qui ont prétendu à cette position exemplaire.</p>
 						<p><span></p>
 						<p><span></p>
 						<p><span></p>
